# GurkeCrypt

./: Cargo.toml  LICENSE  README.md  build.rs
licenses/: dependencies.txt
src/: caesar.rs  chaos_latin.rs  main.rs  morse_code.rs  phone_numbers_code.rs  runes_code.rs
